crates/cella-testing/tests/ui/fail_not_function.stderr
error: expected `fn`
 --> tests/ui/fail_not_function.rs:4:1
  |
4 | struct Foo;
  | ^^^^^^
