crates/cella-testing/tests/ui/fail_not_function.rs
use cella_testing::runtime_test;

#[runtime_test(docker)]
struct Foo;

fn main() {}
